# ferran-jovell-currency-alliance-technical-task

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: mypy.yaml
alexandria/: asgi.py  docs.py  entrypoint.sh  settings.py  urls.py  wsgi.py
alexandria/health/: apps.py  urls.py
alexandria/settings/: base.py  local.py  production.py  testing.py
alexandria/shelves/: apps.py  models.py  serializers.py  urls.py  views.py
alexandria/shelves/migrations/: 0001_initial.py
testing/: settings.py
tests/: conftest.py  test_author_endpoint.py  test_books_endpoint.py  test_docs.py  test_health.py  test_shelves_models.py
